--- a/src/package.json
+++ b/src/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
-    "mongoose": "^5.10.15"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15",
+    "validator": "^13.1.17",
+    "Validator": "^1.1.2"
   }
 }
